--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -275,7 +275,12 @@
             <div class="col-md-12">
               <defaulter-update></defaulter-update>
             </div>
-          </section>     
+          </section> 
+          <section data-category="update-preapps">
+            <div class="col-md-12">
+              <update-preapps></update-preapps>
+            </div>
+          </section>       
           </iron-pages>
           </div>
           </div>
