--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -260,3 +260,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="latefee-itemcard/latefee-itemcard.html">
 <link rel="import" href="defaulter-update/defaulter-update.html">
 <link rel="import" href="defaulter-update-itemcard/defaulter-update-itemcard.html">
+<link rel="import" href="enquirylik-card/enquirylik-card.html">
